# stk2chain

./: .gitignore  Makefile  README.md
doc/specs/: applet.md  contracts.md  gateway.md
ethclient/: Cargo.toml
ethclient/src/: main.rs
scripts/: validate_testnet.rs
tests/: test_send_eth.rs
ussdclient/: Cargo.toml
ussdclient/src/: main.rs
ussdgeth/: Cargo.toml
ussdgeth/src/: audit_tests.rs  lib.rs
ussdgeth/src/reducers/: mod.rs  send_eth.rs
ussdgeth/src/ussdframework/: ussd_screens.rs
