[package]
name = "spacetime-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "1.1.2"
log = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0"
thiserror = "1.0"

# File: ussdgeth/Cargo.toml (add to existing dependencies section)

[dependencies]
spacetimedb = "1.1.2"
log = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
spacetimedb-testing = "1.1.2"
tokio-test = "0.4"